# lab-experiments

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.sisyphus/plans/: lab-15-ray-sglang-integration.md  lab-15b-a2ui-optimization.md  lab-15b-livekit-a2ui-integration.md
docs/: 01-basics.md  02-react-tools.md  03-rag-pipeline.md  04-optimizers.md  05-rlm.md  06-advanced.md  07-generative-feedback-loops.md  08-rlm-mcp.md  09-super-deep-research.md  10-dapr-deep-research.md  12-formal-evolution.md  INDEX.md  shared.md
docs/frontend/: copilotkit-setup.md
lab/: __init__.py
lab/01-basics/: README.md  main.py
lab/02-react-tools/: README.md  main.py
lab/03-rag-pipeline/: README.md  main.py
lab/04-optimizers/: README.md  main.py
lab/05-rlm/: README.md  main.py
lab/06-advanced/: README.md  main.py
lab/07-generative-feedback-loops/: README.md  main.py
lab/08-rlm-mcp/: README.md  main.py  mcp_server.json
lab/09-super-deep-research/: README.md  agents.py  cli.py  frontier.py  orchestrator.py
lab/09_super_deep_research/: README.md  agents.py  cli.py  docker-compose.yml  frontier.py  main.py  orchestrator.py
lab/10_dapr_deep_research/: README.md  cli.py  dapr-multi-app-run.yaml  docker-compose.yml
lab/11_meta_agent/: README.md  cli.py
lab/11_meta_agent/evolution/: gfl.py  (+1 more)
lab/12_formal_evolution/: README.md  cli.py
lab/13_autonomous_factory/: README.md  cli.py
lab/14_durable_meta_agent/: README.md  cli.py
lab/15_ray_sglang/: README.md  cli.py
lab/99-sandbox/: README.md
lab/shared/: __init__.py  config.py  research.py
(+80 files in other folders)
