[project]
name = "experiments"
version = "0.1.0"
description = "DSPy lab / showroom"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dapr-agents>=1.0.2",
    "dspy-ai>=3.2.0",
    "mcp>=1.27.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
ray = ["ray[default]"]
sglang = ["sglang[all]"]
livekit = ["livekit-agents[openai,silero,deepgram,cartesia,turn-detector]"]
qwen3-tts = ["qwen-tts", "flash-attn"]
lab15 = ["experiments[ray]", "experiments[sglang]", "experiments[livekit]", "experiments[qwen3-tts]"]
